# Embedded_Flight_Data_Recorder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix
src/: main.cpp
src/imu/: MPU6050.cpp  MPU6050.h
src/recorder/: Recorder.cpp  Recorder.h
src/utils/: Utils.cpp  Utils.h  utils.cpp
